Created agent for tracking and handling API calls. Addded an interface with gradio. API files modified. Comments modified. Readme file completed.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-fastapi
-uvicorn
-pydantic==1.10.21
-requests
-streamlit
-langchain
-openai 
-pandas
-regex
-fsspec
-huggingface_hub
 faiss-cpu
-python-dotenv
+openai
+dotenv
+numpy
+pandas
+langchain
+langchain-openai
+flask
+flask-cors
+pydantic
+requests
+sqlite3
 gradio
+concurrent.futures
+langdetect
